--- a/pages/learn.html
+++ b/pages/learn.html
@@ -54,7 +54,7 @@
           class="bg-white rounded-xl shadow-md p-4 flex flex-col items-center text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/math.png"
+            src="../img/math.webp"
             alt="Matematika"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -70,7 +70,7 @@
           class="bg-white rounded-xl shadow-md p-4 flex flex-col items-center text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/bindo.png"
+            src="../img/bindo.webp"
             alt="Bahasa Indonesia"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -88,7 +88,7 @@
           class="bg-white rounded-xl shadow-md p-4 flex flex-col items-center text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/ipa.png"
+            src="../img/ipa.webp"
             alt="IPA"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -104,7 +104,7 @@
           class="bg-white rounded-xl shadow-md p-4 flex flex-col items-center text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/ips.png"
+            src="../img/ips.webp"
             alt="IPS"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -121,7 +121,7 @@
           class="bg-white rounded-xl shadow-md p-4 flex flex-col items-center text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/pai.png"
+            src="../img/pai.webp"
             alt="Pendidikan Agama Islam"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -139,7 +139,7 @@
           class="bg-white rounded-xl shadow-md p-4 flex flex-col items-center text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/bing.png"
+            src="../img/bing.webp"
             alt="Bahasa Inggris"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -157,7 +157,7 @@
           class="bg-white rounded-xl shadow-md p-4 flex flex-col items-center text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/seni.png"
+            src="../img/seni.webp"
             alt="Seni Budaya"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
