--- a/pages/seni_budaya.html
+++ b/pages/seni_budaya.html
@@ -62,7 +62,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/ips2.jpg"
+            src="../img/ips2.webp"
             alt="Bab 2"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -79,7 +79,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/ipa4.jpg"
+            src="../img/ipa4.webp"
             alt="Bab 3"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -96,7 +96,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/bindo1.jpg"
+            src="../img/bindo1.webp"
             alt="Bab 4"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
