--- a/pages/bahasa_indonesia.html
+++ b/pages/bahasa_indonesia.html
@@ -45,7 +45,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/bindo1.jpg"
+            src="../img/bindo1.webp"
             alt="Bab 1"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -62,7 +62,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/bindo2.jpg"
+            src="../img/bindo2.webp"
             alt="Bab 2"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -79,7 +79,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/bindo3.jpg"
+            src="../img/bindo3.webp"
             alt="Bab 3"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -96,7 +96,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/bindo4.jpg "
+            src="../img/bindo4.webp "
             alt="Bab 4"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
