--- a/pages/ips.html
+++ b/pages/ips.html
@@ -45,7 +45,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/ips1.jpg"
+            src="../img/ips1.webp"
             alt="Bab 1"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -62,7 +62,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/ips2.jpg"
+            src="../img/ips2.webp"
             alt="Bab 2"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -79,7 +79,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/ips3.jpg"
+            src="../img/ips3.webp"
             alt="Bab 3"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -96,7 +96,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/ips4.jpg"
+            src="../img/ips4.webp"
             alt="Bab 4"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
