--- a/pages/matematika.html
+++ b/pages/matematika.html
@@ -45,7 +45,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/math1.jpg"
+            src="../img/math1.webp"
             alt="Bab 1"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -62,7 +62,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/math2.jpg"
+            src="../img/math2.webp"
             alt="Bab 2"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -79,7 +79,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/math3.jpg"
+            src="../img/math3.webp"
             alt="Bab 3"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -96,7 +96,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/math4.jpg"
+            src="../img/math4.webp"
             alt="Bab 4"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
