--- a/pages/pai.html
+++ b/pages/pai.html
@@ -45,7 +45,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/pai1.jpg"
+            src="../img/pai1.webp"
             alt="Bab 1"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -62,7 +62,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/pai2.jpg"
+            src="../img/pai2.webp"
             alt="Bab 2"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -79,7 +79,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/pai3.jpg"
+            src="../img/pai3.webp"
             alt="Bab 3"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
@@ -96,7 +96,7 @@
           class="bg-white rounded-xl shadow-md p-4 text-center hover:shadow-lg transition"
         >
           <img
-            src="../img/pai4.jpg"
+            src="../img/pai4.webp"
             alt="Bab 4"
             class="w-full h-36 object-cover rounded-md mb-3"
           />
