--- a/pages/speech.html
+++ b/pages/speech.html
@@ -104,8 +104,13 @@
           ];
 
           if (variations.some((phrase) => spokenText.includes(phrase))) {
-            window.location.href = keywordMap[keyword]; // langsung redirect
-            window.AppInventor.setWebViewString("");
+            speak(`Membuka buku mata pelajaran ${keyword}`);
+
+            setTimeout(() => {
+              window.location.href = keywordMap[keyword];
+              window.AppInventor.setWebViewString(""); // reset setelah redirect
+            }, 1000); // kasih jeda 2.5 detik untuk suara selesai dulu
+
             return;
           }
         }
