--- a/pages/speech.html
+++ b/pages/speech.html
@@ -44,8 +44,68 @@
       <p id="log" class="text-center text-sm text-gray-600 mt-4"></p>
     </div>
 
+    <div
+      id="customAlert"
+      style="
+        display: none;
+        position: fixed;
+        inset: 0;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 1000;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      "
+    >
+      <div
+        style="
+          background: white;
+          padding: 24px;
+          border-radius: 12px;
+          text-align: center;
+          max-width: 300px;
+        "
+      >
+        <p>
+          Fitur pengenalan suara tidak tersedia untuk Desktop.<br />Silakan
+          download aplikasi mobile.
+        </p>
+        <div style="margin-top: 20px">
+          <a
+            href="../apk/SIMAK.apk"
+            download
+            class="btn-ok"
+            style="
+              margin-right: 10px;
+              padding: 8px 16px;
+              background: #6366f1;
+              color: white;
+              border-radius: 8px;
+              text-decoration: none;
+            "
+            >Download APK</a
+          >
+          <button
+            onclick="closeAlert()"
+            style="
+              padding: 8px 16px;
+              background: #ccc;
+              border: none;
+              border-radius: 8px;
+            "
+          >
+            Batal
+          </button>
+        </div>
+      </div>
+    </div>
+
     <script>
       lucide.createIcons();
+
+      function closeAlert() {
+        document.getElementById("customAlert").style.display = "none";
+      }
 
       const micButton = document.getElementById("micButton");
       micButton.addEventListener("click", () => {
@@ -53,7 +113,7 @@
         if (typeof window.AppInventor !== "undefined") {
           window.AppInventor.setWebViewString("mic_clicked");
         } else {
-          alert("Fitur pengenalan suara tidak tersedia.");
+          document.getElementById("customAlert").style.display = "flex";
         }
       });
 
